# ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.codex/skills/ai-portfolio-example-authoring/: SKILL.md
.codex/skills/ai-portfolio-repo-context/: SKILL.md
.githooks/: pre-commit
docs/: index.html  styles.css
notebooks/01-supervised/: README.md
notebooks/02-unsupervised/: README.md
notebooks/03-deep-learning/: README.md
notebooks/classical_ml/: README.md  knn_iris.ipynb
notebooks/deep_learning/: README.md  autoencoder_mnist.ipynb  cifar10_cnn.ipynb  fashion_mnist_cnn.ipynb  lstm_sentiment_classification.ipynb  mnist_mlp.ipynb  transfer_learning_cifar10.ipynb
notebooks/generative_ai/: README.md
notebooks/supervised_models/: Decision_Tree.ipynb  Linear_Regression.ipynb  Logistic_Regression.ipynb  README.md  Random_Forest.ipynb  SVM.ipynb  decision_tree_wine.ipynb  gradient_boosting_breast_cancer.ipynb  kNN.ipynb  linear_regression_diabetes.ipynb  logistic_regression_breast_cancer.ipynb  naive_bayes_iris.ipynb  random_forest_wine.ipynb  support_vector_machine_breast_cancer.ipynb
notebooks/unsupervised_ml/: README.md  agglomerative_clustering_iris.ipynb  dbscan_moons.ipynb  gaussian_mixture_iris.ipynb  isolation_forest_anomaly_detection.ipynb  kmeans_iris.ipynb  pca_iris_visualization.ipynb  tsne_digits_visualization.ipynb
scripts/: check_portfolio_sync.sh  strip_notebook_outputs.py  update_skill_references.sh
src/ai_portfolio/: __init__.py
src/ia_learning/: __init__.py
src/ia_learning/supervised/: __init__.py  (+1 more)
tests/: test_package.py
(+22 files in other folders)
