[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portfolio"
version = "0.2.0"
description = "A personal AI portfolio with classical ML, deep learning, and generative AI examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "sentencepiece",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
